<resources>
    <string name="app_name">EQueue</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_fragment_pesan_antrian">Pesan Antrian</string>
    <string name="title_fragment_jadwal_dokter">Jadwal Dokter</string>
    <string name="title_fragment_riwayat_antrian">Riwayat Antrian</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="telephone">Telephone</string>
    <string name="username">Username</string>
    <string name="toolbar">Toolbar</string>
</resources>
